exports[`LabelValueView should render LabelValueView for an node input 1`] = `
<div
  className="terraClinical-LabelValueView">
  <div
    className="terraClinical-LabelValueView-label">
    Label
  </div>
  <div>
    More Sample Text
  </div>
</div>
`;

exports[`LabelValueView should render LabelValueView for text and node inputs 1`] = `
<div
  className="terraClinical-LabelValueView">
  <div
    className="terraClinical-LabelValueView-label">
    Label
  </div>
  <div
    className="terraClinical-LabelValueView-value">
    Sample Text 1
  </div>
  <div>
    More Sample Text
  </div>
</div>
`;

exports[`LabelValueView should render a LabelValueView for text input 1`] = `
<div
  className="terraClinical-LabelValueView">
  <div
    className="terraClinical-LabelValueView-label">
    Label
  </div>
  <div
    className="terraClinical-LabelValueView-value">
    Sample Text
  </div>
</div>
`;

exports[`LabelValueView should render a default LabelValueView 1`] = `
<div
  className="terraClinical-LabelValueView">
  <div
    className="terraClinical-LabelValueView-label">
    Label
  </div>
  <div
    className="terraClinical-LabelValueView-value">
    --
  </div>
</div>
`;
